--- a/package.json
+++ b/package.json
@@ -22,11 +22,13 @@
     "eslint-plugin-import": "2.8.0",
     "eslint-plugin-jsx-a11y": "5.1.1",
     "eslint-plugin-react": "7.4.0",
+    "express": "^4.16.2",
     "extract-text-webpack-plugin": "3.0.2",
     "file-loader": "1.1.5",
     "fs-extra": "3.0.1",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
+    "konva": "^1.7.6",
     "object-assign": "4.1.1",
     "postcss-flexbugs-fixes": "3.2.0",
     "postcss-loader": "2.0.8",
@@ -47,9 +49,13 @@
   "scripts": {
     "start": "node scripts/start.js",
     "build": "node scripts/build.js",
-    "test": "node scripts/test.js --env=jsdom"
+    "test": "node scripts/test.js --env=jsdom",
+    "client": "cd client && yarn start",
+    "server": "nodemon server.js",
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
   },
   "devDependencies": {
+    "concurrently": "^3.5.0",
     "node-sass": "^4.7.2",
     "sass-loader": "^6.0.6",
     "webpack": "^3.8.1"
@@ -78,6 +84,7 @@
     "moduleNameMapper": {
       "^react-native$": "react-native-web"
     },
+    "proxy": "http://localhost:5000/",
     "moduleFileExtensions": [
       "web.js",
       "mjs",
